<resources>
    <string name="app_name">Note IT</string>
    <string name="my_notes">My Notes</string>
    <string name="search_note">Search Note</string>
    <string name="type_note_here">Type Note Here...</string>
    <string name="note_subtitle">Note Subtitle</string>
    <string name="note_title">Note Title</string>
    <string name="miscellaneous">Miscellaneous</string>
    <string name="pick_color">Pick Color</string>
    <string name="add_image">Add Image</string>
    <string name="add_url">Add URL</string>
    <string name="enter_url">Enter URL</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="delete_note">Delete Note</string>
    <string name="are_you_sure_you_want_to_delete_this_note">Are you sure you want to delete this note?</string>
</resources>