<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".activities.CreateNoteActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/_40sdp"
        android:clipToPadding="false"
        android:paddingBottom="@dimen/_10sdp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true">
            
            <ImageView
                android:id="@+id/imageBack"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:layout_marginStart="@dimen/_6sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_arrow_back"
                android:tint="@color/colorIcons"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                >

            </ImageView>
            
            <ImageView
                android:id="@+id/imageSave"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_12ssp"
                android:background="@drawable/background_done_button"
                android:contentDescription="@string/app_name"
                android:padding="@dimen/_4ssp"
                android:src="@drawable/ic_done"
                android:tint="@color/colorIcons"
                app:layout_constraintBottom_toBottomOf="@id/imageBack"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/imageBack"
                >

            </ImageView>

            <EditText
                android:id="@+id/inputNoteTitle"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:layout_marginStart="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_marginEnd="@dimen/_12sdp"
                android:background="@null"
                android:hint="@string/note_title"
                android:imeOptions="actionDone"
                android:importantForAutofill="no"
                android:includeFontPadding="false"
                android:inputType="text"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colorTextHint"
                android:textSize="@dimen/_16sdp"
                app:layout_constraintTop_toBottomOf="@id/imageBack"
                >

            </EditText>
            
            <TextView
                android:id="@+id/textDateTime"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:includeFontPadding="false"
                android:textColor="@color/colorIcons"
                android:textSize="@dimen/_10sdp"
                app:layout_constraintEnd_toEndOf="@id/inputNoteTitle"
                app:layout_constraintStart_toStartOf="@id/inputNoteTitle"
                app:layout_constraintTop_toBottomOf="@id/inputNoteTitle"
                >

            </TextView>

            <EditText
                android:id="@+id/inputNoteSubtitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_marginEnd="@dimen/_12sdp"
                android:importantForAutofill="no"
                android:includeFontPadding="false"
                android:hint="@string/note_subtitle"
                android:inputType="textMultiLine"
                android:paddingBottom="@dimen/_8sdp"
                android:paddingTop="@dimen/_8sdp"
                android:textColor="@color/colorTextSubtitle"
                android:textColorHint="@color/colorTextHint"
                android:textSize="@dimen/_13ssp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/viewSubtitleIndicator"
                app:layout_constraintTop_toBottomOf="@id/textDateTime"
                >

            </EditText>
            
            <View
                android:id="@+id/viewSubtitleIndicator"
                android:layout_width="@dimen/_5sdp"
                android:layout_height="0dp"
                android:background="@drawable/background_subtitle_indicator"
                android:layout_marginStart="@dimen/_12sdp"
                app:layout_constraintBottom_toBottomOf="@id/inputNoteSubtitle"
                app:layout_constraintTop_toTopOf="@id/inputNoteSubtitle"
                app:layout_constraintStart_toStartOf="parent"
                >

            </View>
            
            <ImageView
                android:id="@+id/imageNote"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_marginEnd="@dimen/_12sdp"
                android:adjustViewBounds="true"
                android:contentDescription="@string/app_name"
                android:visibility="gone"
                app:layout_constraintTop_toBottomOf="@id/inputNoteSubtitle"
                >

            </ImageView>
            
            <ImageView
                android:id="@+id/imageRemoveImage"
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:background="@drawable/background_delete"
                android:contentDescription="@string/app_name"
                android:padding="@dimen/_4sdp"
                android:src="@drawable/ic_delete"
                android:tint="@color/colorWhite"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="@id/imageNote"
                app:layout_constraintTop_toTopOf="@id/imageNote"
                >

            </ImageView>
            
            <LinearLayout
                android:id="@+id/layoutWebUrl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_marginEnd="@dimen/_12sdp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:visibility="gone"
                app:layout_constraintTop_toBottomOf="@id/imageNote"
                tools:ignore="UseCompoundDrawables">
                
                <TextView
                    android:id="@+id/textWebUrl"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:autoLink="web"
                    android:fontFamily="@font/ubuntu_regular"
                    android:includeFontPadding="false"
                    android:textSize="@dimen/_13ssp"
                    >

                </TextView>
                
                <ImageView
                    android:id="@+id/imageRemoveWebUrl"
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/ic_delete"
                    android:tint="@color/colorDelete"
                    >

                </ImageView>

            </LinearLayout>
            
            <EditText
                android:id="@+id/inputNoteText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_marginEnd="@dimen/_12sdp"
                android:background="@null"
                android:gravity="top"
                android:hint="@string/type_note_here"
                android:importantForAutofill="no"
                android:inputType="textMultiLine"
                android:minHeight="@dimen/_100sdp"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colorTextHint"
                android:textSize="@dimen/_13ssp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/layoutWebUrl"
                >

            </EditText>

            

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <include layout="@layout/layout_miscellaneous" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>